--- a/main/http_server/axe-os/src/app/layout/styles/layout/_utils.scss
+++ b/main/http_server/axe-os/src/app/layout/styles/layout/_utils.scss
@@ -2,7 +2,7 @@
     background: var(--surface-card);
     border: 1px solid var(--surface-border);
     padding: 2rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     box-shadow: var(--card-shadow);
     border-radius: $borderRadius;
 
